# Legal-AI-Studio

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  railway-atlas.toml  railway-backend.toml  railway-frontend.toml
atlas/: .dockerignore  Dockerfile  package.json  tailwind.config.ts  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  compliance.py  contracts.py  documents.py  immigration.py  legal.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/data/: clause_library.py  crs_rules.py  employment_standards.py  immigration_programs.py
backend/app/data/document_templates/: nda.jinja2
backend/app/middleware/: disclaimer.py
backend/app/models/: __init__.py  base.py  compliance.py  contracts.py  documents.py  immigration.py  legal.py  types.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  compliance.py  contracts.py  documents.py  immigration.py  legal.py
backend/app/services/: auth_service.py  compliance_service.py  contract_service.py  crs_calculator.py  document_service.py  immigration_service.py  legal_service.py  pnp_matcher.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_compliance_routes.py  test_health.py  test_immigration_routes.py
backend/tests/unit/: test_compliance_service.py  test_contract_service.py  test_crs_calculator.py  test_pnp_matcher.py
(+102 files in other folders)
